added new text box , changed colour

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="night">
+<html lang="en" data-theme="black">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,8 +32,9 @@
             <!-- Error message -->
             <div class="alert-message"></div>
             <div class="input-section">
-                <input type="text" placeholder="Add a todo . . ." class="input input-bordered input-secondary w-full max-w-xs" />
+                <input type="text" placeholder="title . . ." class="input input-bordered input-secondary w-full max-w-xs" />
                 <input type="date" class="input input-bordered input-secondary w-full max-w-xs schedule-date" />
+                <input type="text" placeholder="description . . ." class="input input-bordered input-secondary w-full max-w-xs" />
                 <button class="btn btn-secondary add-task-button">
                     <i class="bx bx-plus bx-sm"></i>
                 </button>
@@ -50,7 +51,7 @@
                 </ul>
             </div>
             <button class="btn btn-secondary delete-all-btn">
-                Delete All
+                Clear All
             </button>
         </div>
 
@@ -70,7 +71,7 @@
     </div>
 
     <!--Theme switcher-->
-    <div class="theme-switcher">
+    <!-- <div class="theme-switcher">
         <div class="dropdown dropdown-left">
             <label tabindex="0" class="btn m-1">
                 <i class='bx bxs-palette bx-sm'></i>
@@ -89,7 +90,7 @@
                 <li class="theme-item" theme="night"><a>night</a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
     <!-- JS -->
     <script src="js/main.js"></script>
